--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello World</title>
+    <title>Cory John Rist Yoga</title>
     <style type="text/css">
-    body {
-        margin: 40px
-        auto;
-        max-width: 650px;
-        line-height: 1.6;
-        font-size: 18px;
-        color: #444;
-        padding: 0
-        10px
-    }
+        body {
+            margin: 40px auto;
+            max-width: 650px;
+            line-height: 1.6;
+            font-size: 18px;
+            color: #444;
+            padding: 0 10px
+        }
 
-    h1, h2, h3 {
-        line-height: 1.2
-    }
+        h1,
+        h2,
+        h3 {
+            line-height: 1.2
+        }
     </style>
 </head>
 
-<h1>Hello World</h1>
+<body>
+    <header>
+        <h1>
+            This is the website of Cory John Rist.
+        </h1>
+        <aside>And it's the god damn best thing i have ever seeeeeeeeeeeen.
+        </h1>
+        <aside>Damn<aside><aside><aside>Junk time it
+        
+</body>
+
+</html>
