--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<head>
+
+<link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+                
+    
+</head>
+
 <html>
 
 <head>
