--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <h1>
-            This is the website of Cory John Rist.
+            This is the website of Cory John Rist. UPDATED.
         </h1>
         <aside>And it's the god damn best thing i have ever seeeeeeeeeeeen.
         </h1>
