--- a/index.html
+++ b/index.html
@@ -1,38 +1,32 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cory John Rist Yoga</title>
-    <style type="text/css">
-      <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-        body {
-            margin: 40px auto;
-            max-width: 650px;
-            line-height: 1.6;
-            font-size: 18px;
-            color: #444;
-            padding: 0 10px
-        }
-
-        h1,
-        h2,
-        h3 {
-            line-height: 1.2
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <h1>
-            This is the website of Cory John Rist. UPDATED.
-        </h1>
-        <aside>And it's the god damn best thing i have ever seeeeeeeeeeeen.
-        </h1>
-        <aside>Damn<aside><aside><aside>Junk time it
-        
-</body>
-
-</html>
+<h1>CORY RIST</h1>
+<p><img src="https://www.coryristyoga.com/pages/aboutme#" alt="" /></p>
+<p>&nbsp;</p>
+<p>Welcome to my website everyone, i hope you like it.</p>
+<h2><a href="https://www.coryristyoga.com/pages/aboutme" target="_blank" rel="noopener">Seriously</a>, Welcome and lets all get along nicely..</h2>
+<p><strong>Ten fucking declarations, a <code>@media</code> block, and one attribute.</strong></p>
+<p>That&rsquo;s how much CSS and HTML it took to turn that <a href="https://motherfuckingwebsite.com/">grotesque pile of shit</a> into this finally perfect masterpiece. It&rsquo;s so fucking simple and it still has all the glory of the original perfect-ass website:</p>
+<ul>
+<li>Shit&rsquo;s <em>finally</em> lightweight and loads fast;</li>
+<li><em>Finally</em> fits on all your shitty screens;</li>
+<li><em>Finally</em> looks the same in all your shitty browsers;</li>
+<li><em>Won&rsquo;t</em> bleach your fucking eyeballs at night if your browser thinks you like dark things;</li>
+<li>The motherfucker&rsquo;s <em>still</em> accessible to every asshole that visits your site;</li>
+<li>Shit&rsquo;s <em>still</em> legible and gets your fucking point across.</li>
+</ul>
+<h3>And guess what, motherfucker:</h3>
+<p>You never knew it, but it&rsquo;s easy to improve reliability on your site. Here&rsquo;s how.</p>
+<h2>A little more accessibility</h2>
+<p>I know you love marginalization, but you should take care of people. The <abbr title="HyperText Markup Language">HTML</abbr> tag doesn&rsquo;t include the <a href="https://www.w3.org/TR/html5/dom.html#the-lang-and-xml:lang-attributes"><code>lang</code> attribute</a> in your shitty webpage.<br /> You ever listen to a <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ">wrong language screen reader lecture</a>? What a shitty experience.</p>
+<h2>Typography matters</h2>
+<p><a href="https://smartquotesforsmartpeople.com/">Don&rsquo;t be dumb with typography</a>. Don&rsquo;t let improper marks and quotes make their way onto websites because of dumb defaults in applications and CMSs.<br /> And did you let the browser choose the font? Don&rsquo;t make me read such text with <em>Times New Roman</em>.</p>
+<h2>License, motherfucker</h2>
+<p>Do you revendicate intellectual property? No. So you must <a href="https://choosealicense.com/">choose a fucking public license</a>.<br /> And as you&rsquo;ll never be perfect, let others <a href="https://github.com/LeoColomb/perfectmotherfuckingwebsite">improve your shit</a> or <a href="https://github.com/LeoColomb/perfectmotherfuckingwebsite/blob/main/LICENSE">do what the fuck they want to</a>.</p>
+<h2>Yes, this is the last fucking satire, you fuck</h2>
+<p>I&rsquo;m impressed about what the creator of <a href="http://bettermotherfuckingwebsite.com/">this site&rsquo;s inspiration did</a>. What I&rsquo;m saying is that it&rsquo;s so, so simple to make sites easier to read. Websites are broken by default&mdash;they are functional, high-performing, and accessible, but they&rsquo;re also fucking ugly. You and all the other web designers out there need to make them not total shit.</p>
+<blockquote>
+<p>&ldquo;Don&rsquo;t ignore stupid things or you will stay at the motherfucker level.&rdquo; &mdash; Brad Hollande</p>
+</blockquote>
+<hr />
+<h2>Epilogue</h2>
+<p>Inspired by the geniuses behind <a href="https://motherfuckingwebsite.com/">motherfuckingwebsite.com</a> and <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite.com</a>.</p>
+<p>This page&mdash;that isn&rsquo;t a total fucking content&mdash;was licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.</p>
