--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
-<h1>CORY RIST</h1>
-<p><img src="https://www.coryristyoga.com/pages/aboutme#" alt="" /></p>
-<p>&nbsp;</p>
-<p>Welcome to my website everyone, i hope you like it.</p>
-<h2><a href="https://www.coryristyoga.com/pages/aboutme" target="_blank" rel="noopener">Seriously</a>, Welcome and lets all get along nicely..</h2>
-<p><strong>Ten fucking declarations, a <code>@media</code> block, and one attribute.</strong></p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>CORY RIST</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="🖕 And it’s really more fucking perfect than the last guy’s.">
+    <link rel="stylesheet" href="/fuckingstyle.css?v=5f5b40afe5ca75e9f063d1a57969b86917339a11">
+    <link rel="icon" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDAgMTAwIj48dGV4dCB5PSIuOWVtIiBmb250LXNpemU9IjkwIj7wn5aVPC90ZXh0Pjwvc3ZnPgo=">
+  </head>
+  <h1 id="Cory Rist">Cory Rist Website Fun.</h1>
+<p><img src="https://storage.googleapis.com/cmsassets.offeringtree.com/production/users/feed5edf-303d-482b-a5d2-baefbd4ddcf9/4ced251e6a20419eae4d322a9d9123b5/cropped_Headshop_BW2.png" alt="" width="518" height="709" /></p>
+<p>
+  <p>
+    <p>
+<p>And it&rsquo;s <em>really</em> more fucking perfect than the last guy&rsquo;s.</p>
+<h2 id="seriously-some-minimal-fucking-things-are-needed-to-make-this-shit-perfect">Seriously, some minimal fucking things are needed to make this shit perfect.</h2>
+<p><strong>Ten fucking declarations, a <code class="language-plaintext highlighter-rouge">@media</code> block, and one attribute.</strong></p>
 <p>That&rsquo;s how much CSS and HTML it took to turn that <a href="https://motherfuckingwebsite.com/">grotesque pile of shit</a> into this finally perfect masterpiece. It&rsquo;s so fucking simple and it still has all the glory of the original perfect-ass website:</p>
 <ul>
 <li>Shit&rsquo;s <em>finally</em> lightweight and loads fast;</li>
@@ -13,20 +25,20 @@
 <li>The motherfucker&rsquo;s <em>still</em> accessible to every asshole that visits your site;</li>
 <li>Shit&rsquo;s <em>still</em> legible and gets your fucking point across.</li>
 </ul>
-<h3>And guess what, motherfucker:</h3>
+<h3 id="and-guess-what-motherfucker">And guess what, motherfucker:</h3>
 <p>You never knew it, but it&rsquo;s easy to improve reliability on your site. Here&rsquo;s how.</p>
-<h2>A little more accessibility</h2>
-<p>I know you love marginalization, but you should take care of people. The <abbr title="HyperText Markup Language">HTML</abbr> tag doesn&rsquo;t include the <a href="https://www.w3.org/TR/html5/dom.html#the-lang-and-xml:lang-attributes"><code>lang</code> attribute</a> in your shitty webpage.<br /> You ever listen to a <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ">wrong language screen reader lecture</a>? What a shitty experience.</p>
-<h2>Typography matters</h2>
+<h2 id="a-little-more-accessibility">A little more accessibility</h2>
+<p>I know you love marginalization, but you should take care of people. The <abbr title="HyperText Markup Language">HTML</abbr> tag doesn&rsquo;t include the <a href="https://www.w3.org/TR/html5/dom.html#the-lang-and-xml:lang-attributes"><code class="language-plaintext highlighter-rouge">lang</code> attribute</a> in your shitty webpage.<br /> You ever listen to a <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ">wrong language screen reader lecture</a>? What a shitty experience.</p>
+<h2 id="typography-matters">Typography matters</h2>
 <p><a href="https://smartquotesforsmartpeople.com/">Don&rsquo;t be dumb with typography</a>. Don&rsquo;t let improper marks and quotes make their way onto websites because of dumb defaults in applications and CMSs.<br /> And did you let the browser choose the font? Don&rsquo;t make me read such text with <em>Times New Roman</em>.</p>
-<h2>License, motherfucker</h2>
+<h2 id="license-motherfucker">License, motherfucker</h2>
 <p>Do you revendicate intellectual property? No. So you must <a href="https://choosealicense.com/">choose a fucking public license</a>.<br /> And as you&rsquo;ll never be perfect, let others <a href="https://github.com/LeoColomb/perfectmotherfuckingwebsite">improve your shit</a> or <a href="https://github.com/LeoColomb/perfectmotherfuckingwebsite/blob/main/LICENSE">do what the fuck they want to</a>.</p>
-<h2>Yes, this is the last fucking satire, you fuck</h2>
+<h2 id="yes-this-is-the-last-fucking-satire-you-fuck">Yes, this is the last fucking satire, you fuck</h2>
 <p>I&rsquo;m impressed about what the creator of <a href="http://bettermotherfuckingwebsite.com/">this site&rsquo;s inspiration did</a>. What I&rsquo;m saying is that it&rsquo;s so, so simple to make sites easier to read. Websites are broken by default&mdash;they are functional, high-performing, and accessible, but they&rsquo;re also fucking ugly. You and all the other web designers out there need to make them not total shit.</p>
 <blockquote>
 <p>&ldquo;Don&rsquo;t ignore stupid things or you will stay at the motherfucker level.&rdquo; &mdash; Brad Hollande</p>
 </blockquote>
 <hr />
-<h2>Epilogue</h2>
+<h2 id="epilogue">Epilogue</h2>
 <p>Inspired by the geniuses behind <a href="https://motherfuckingwebsite.com/">motherfuckingwebsite.com</a> and <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite.com</a>.</p>
 <p>This page&mdash;that isn&rsquo;t a total fucking content&mdash;was licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.</p>
